[ASTERIXDB-3566][EXT]: Add support to COPY TO for Azure
- user model changes: no
- storage format changes: no
- interface changes: no

Details:
- Add support to COPY TO for Azure.
- Enable all COPY TO test cases for Azure.

Ext-ref: MB-63080
Change-Id: I613d45f3f97bfdc2e7c2e7e4733d8cfce31ec359
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/19449
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Murtadha Hubail <mhubail@apache.org>